Revise README for NYC Taxi Big Data Pipeline
Updated project overview and access details for NYC Taxi Big Data Pipeline. Enhanced service descriptions and added technical architecture.